<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/promocionesFragment"
            android:icon="@drawable/baseline_local_offer_24"
            android:title="@string/promocionesfragmenttitle" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/listpedFragment"
            android:icon="@drawable/baseline_view_list_24"
            android:title="@string/lispedfragmenttitle" />
        <item
            android:id="@+id/creapedFragment"
            android:icon="@drawable/baseline_create_24"
            android:title="@string/creapedfragmenttitle" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/listproducFragment"
            android:icon="@drawable/baseline_inventory_24"
            android:title="@string/listproducfragmenttitle" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/listcliFragment"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/listclifragmenttitle" />
        <item
            android:id="@+id/creacliFragment"
            android:icon="@drawable/baseline_person_add_alt_1_24"
            android:title="@string/creaclifragmenttitle" />
    </group>
</menu>