<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ModifypedFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="40dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="40dp" />

        <EditText
            android:id="@+id/ptdocumento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ptdocumento"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/ptidped"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/ptrazonsocial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ptrazonsocial"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/ptidcli"
            app:layout_constraintTop_toBottomOf="@+id/ptdocumento" />

        <EditText
            android:id="@+id/ptidcli"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/ptidped"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ptidped" />

        <EditText
            android:id="@+id/ptidusu"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/ptidped"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ptfchareparto" />

        <EditText
            android:id="@+id/ptidproduc"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/ptidped"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/ptrucdni"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/ptrucdni"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ptrazonsocial" />

        <EditText
            android:id="@+id/ptdireccion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/ptdireccion"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ptrucdni" />

        <EditText
            android:id="@+id/ptfchareparto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ptreparto"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ptdireccion" />

        <AutoCompleteTextView
            android:id="@+id/ptvendedor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ptvendedor"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/ptidusu"
            app:layout_constraintTop_toBottomOf="@+id/ptfchareparto" />

        <AutoCompleteTextView
            android:id="@+id/ptdescripcionproducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/ptdescripcionproducto"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/ptidproduc"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/ptunidadproducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/ptunidad"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ptdescripcionproducto" />

        <EditText
            android:id="@+id/ptcantidadproducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/ptcantidad"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ptunidadproducto" />

        <EditText
            android:id="@+id/ptprecioproducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/ptprecio"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ptcantidadproducto" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tvdetallepedido"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ptvendedor" />

        <Button
            android:id="@+id/btnagregardetalle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/textbtnagregardetalle"
            android:textSize="8sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/ptprecioproducto" />

        <Button
            android:id="@+id/btnactualizarlistado"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/btnactualizarlistado"
            android:textSize="8sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/ptprecioproducto" />

        <Button
            android:id="@+id/btnguardar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/textbtnregistrar"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/rvdetallepedido" />

        <Button
            android:id="@+id/btncancelar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/textbtncancelar"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnguardar"
            app:layout_constraintTop_toBottomOf="@+id/rvdetallepedido" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvdetallepedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvunidades" />

        <TextView
            android:id="@+id/tvtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="18dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btncancelar"
            app:layout_constraintTop_toBottomOf="@+id/rvdetallepedido" />

        <EditText
            android:id="@+id/ptidped"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/ptidped"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvidsdetalles"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textids"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />

        <TextView
            android:id="@+id/tvdescripciones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvdescripcion"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvunidades"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvidsdetalles"
            app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />

        <TextView
            android:id="@+id/tvunidades"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tviunidad"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvcantidades"
            app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />

        <TextView
            android:id="@+id/tvcantidades"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvcantidad"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvimportes"
            app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />

        <TextView
            android:id="@+id/tvimportes"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvimporter"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/tvacciones"
            app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />

        <TextView
            android:id="@+id/tvacciones"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tvacciones"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnagregardetalle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>